(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(executable
 (name minipython)
 (modules
  minipython
  lexer
  parser
  ast
  Codegen
  typing
  Print_typed_ast
  Print_ast
  compile
  x86_64
  utils
  math)
 (libraries llvm llvm.bitwriter llvm.analysis)
 (promote (until-clean))
 (flags ()))
